[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbase-profile-exporter"
version = "0.4.0"
description = "Export public PromptBase profile prompts into TXT, Markdown, JSON, and CSV catalogs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PromptBase Profile Exporter contributors" }
]
keywords = ["promptbase", "prompts", "export", "cli", "catalog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/IACBI/promptbase-profile-exporter"
Issues = "https://github.com/IACBI/promptbase-profile-exporter/issues"

[project.scripts]
promptbase-export = "promptbase_exporter.cli:main"
