[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbase-profile-exporter"
version = "0.7.0"
description = "Export public PromptBase profile prompts into TXT, Markdown, JSON, and CSV catalogs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "PromptBase Profile Exporter contributors" }
]
keywords = ["promptbase", "prompts", "export", "cli", "catalog"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/IACBI/promptbase-profile-exporter"
Issues = "https://github.com/IACBI/promptbase-profile-exporter/issues"

[project.scripts]
promptbase-export = "promptbase_exporter.cli:main"
promptbase-export-web = "promptbase_exporter.web:main"

[project.optional-dependencies]
dev = ["build", "ruff", "twine"]

[tool.setuptools.package-data]
promptbase_exporter = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
